--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,9 @@
     "angular": "1.2.16",
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
-    "bootstrap-sass-official": "~3.2.0"
+    "bootstrap-sass-official": "~3.2.0",
+    "daterangepicker-compare": "https://github.com/chihab/daterangepicker-compare.git",
+    "moment": "~2.8.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
